# py-a2lfile

./: .gitignore  Cargo.toml  README.md  create_typing.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python/a2lfile/: __init__.py  _a2lfile.pyi
python/tests/: test_bindings.py  test_volvo_zuul_integration.py
scripts/: set_release_version.py
src/: lib.rs  python.rs
