[package]
name = "pya2lfile"
version = "0.0.1"
authors = ["Max Idermark <max@idermark.com>"]
edition = "2024"
description = "Python bindings for the crate a2lfile"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["a2l", "file", "file-format", "ASAM-MCD-2MC"]
categories = ["parser-implementations"]
repository = "https://github.com/niradynamics/py-a2lfile"
rust-version = "1.88"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
a2lfile_core = { package = "a2lfile", version = "=3.3.2", default-features = false }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
pyo3-stub-gen = { version = "0.17.2", default-features = false, features = ["infer_signature"] }

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
